# serializer version: 1
# name: test_entities[switch.test_receiver_audyssey_dynamic_eq-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_receiver_audyssey_dynamic_eq',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Audyssey Dynamic EQ',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Audyssey Dynamic EQ',
    'platform': 'denonavr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dynamic_eq',
    'unique_id': 'model5-123456789-dynamic_eq',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.test_receiver_audyssey_dynamic_eq-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test_Receiver Audyssey Dynamic EQ',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_receiver_audyssey_dynamic_eq',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.test_receiver_auto_lip_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_receiver_auto_lip_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto lip sync',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto lip sync',
    'platform': 'denonavr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_lip_sync',
    'unique_id': 'model5-123456789-auto_lip_sync',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.test_receiver_auto_lip_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test_Receiver Auto lip sync',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_receiver_auto_lip_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.test_receiver_subwoofer_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_receiver_subwoofer_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Subwoofer output',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subwoofer output',
    'platform': 'denonavr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subwoofer',
    'unique_id': 'model5-123456789-subwoofer',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.test_receiver_subwoofer_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test_Receiver Subwoofer output',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_receiver_subwoofer_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
